--- a/index.html
+++ b/index.html
@@ -19,65 +19,71 @@
         </nav>
     </header>
 
-    <!--Mission-->
-    <div class="mission">
-      <div class="mission-statement">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    <!--body content-->
+
+    <div class="main">
+
+      <!--Mission-->
+      <div class="mission">
+        <div class="mission-statement">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
       </div>
+
+        <!--Featured Teas-->
+        <div class="featured-tea">
+          <div class="featured-tea-intro">
+            <h2>Tea of the Month</h2>
+            <h4>What's Steeping at The Tea Cozy?</h4>
+          </div>
+          <div class="teas">
+            <img src="./resources/images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
+            <span>Fall Berry Blitz Tea</span>
+          </div>
+          <div class="teas">
+            <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+            <span>Spiced Rum Tea</span>
+          </div>
+          <div class="teas">
+            <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts">
+            <span>Seasonal Donuts</span>
+          </div>
+          <div class="teas">
+            <img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
+            <span>Myrtle Ave Tea</span>
+          </div>
+          <div class="teas">
+            <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+            <span>Bedford Bizarre Tea</span>
+          </div>
+        </div>
+
+        <!--Locations-->
+        <div class="locations">
+          <h2>Locations</h2>
+          <div class="boxes">
+            <div class="location-block">
+              <h3>Downtown</h3>
+              <span>384 West 4th St</span>
+              <span>Suite 108</span>
+              <span>Portland, Maine</span>
+            </div>
+            <div class="location-block">
+              <h3>East Bayside</h3>
+              <span>3433 Phisherman's Avenue</span>
+              <span>(Northwest Corner)</span>
+              <span>Portland, Maine</span>
+            </div>
+            <div class="location-block">
+              <h3>Oakdale</h3>
+              <span>515 Crescent Avenue</span>
+              <span>Second Floor</span>
+              <span>Portland, Maine</span>
+            </div>
+          </div>
+        </div>
     </div>
-
-      <!--Featured Teas-->
-      <div class="featured-tea">
-        <div class="featured-tea-intro">
-          <h2>Tea of the Month</h2>
-          <h4>What's Steeping at The Tea Cozy?</h4>
-        </div>
-        <div class="teas">
-          <img src="./resources/images/img-berryblitz.jpg" alt="Fall Berry Blitz Tea">
-          <span>Fall Berry Blitz Tea</span>
-        </div>
-        <div class="teas">
-          <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
-          <span>Spiced Rum Tea</span>
-        </div>
-        <div class="teas">
-          <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts">
-          <span>Seasonal Donuts</span>
-        </div>
-        <div class="teas">
-          <img src="./resources/images/img-myrtle-ave.jpg" alt="Myrtle Ave Tea">
-          <span>Myrtle Ave Tea</span>
-        </div>
-        <div class="teas">
-          <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
-          <span>Bedford Bizarre Tea</span>
-        </div>
-      </div>
-
-      <!--Locations-->
-      <div class="locations">
-        <h2>Locations</h2>
-        <div class="location-block">
-          <h3>Downtown</h3>
-          <p>384 West 4th St</p>
-          <p>Suite 108</p>
-          <p>Portland, Maine</p>
-        </div>
-        <div class="location-block">
-          <h3>East Bayside</h3>
-          <p>3433 Phisherman's Avenue</p>
-          <p>(Northwest Corner)</p>
-          <p>Portland, Maine</p>
-        </div>
-        <div class="location-block">
-          <h3>Oakdale</h3>
-          <p>515 Crescent Avenue</p>
-          <p>Second Floor</p>
-          <p>Portland, Maine</p>
-        </div>
-
-      </div>
 
       <!--Footer-->
       <footer>
